testdata/invalid/unclosed_brace.pr
// Unclosed brace.
main() {
  Int x = 1;
